v0.20.2 Fixed spacing between headings

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -79,17 +79,18 @@ body.vscode-high-contrast #toc h2 {
 }
 
 h3 {
-  top: 1.5rem;
+  top: 1.8rem;
+  margin: 0.1rem 0;
   z-index: 500;
   line-height: 150%;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-style: italic;
 }
 
 h4 {
-  top: 3rem;
+  top: 3.5rem;
   z-index: 400;
-  line-height: 200%;
+  line-height: 150%;
   font-size: 1.1rem;
   padding: 0.5em 0;
 }
@@ -146,7 +147,7 @@ th {
   position: -o-sticky;
   position: sticky;
   line-height: 150%;
-  top: 3rem;
+  top: 3.5rem;
 }
 
 th,
